# living-books-hub

./: .gitignore  README.md  render.yaml
.claude/: CLAUDE.md  settings.json
.claude/agents/: api-engineer.md  explorer.md  qa-reviewer.md  ui-engineer.md
.claude/skills/: add-book.md  api-endpoint.md  create-list.md  database-migration.md  frontend-page.md  stripe-integration.md
.github/workflows/: cron-jobs.yml
backend/: .env.example  alembic.ini  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/: admin.py  auth.py  books.py  children.py  curriculum.py  drip.py  librarian.py  lists.py  newsletter.py  plans.py  reviews.py  stats.py  stripe_routes.py  tracking.py
backend/app/core/: auth.py  config.py  database.py  rate_limit.py
backend/app/models/: __init__.py  book.py  child.py  click_event.py  drip_event.py  list.py  newsletter_send.py  reading_plan.py  review.py  schemas.py  subscriber.py  user.py
backend/app/services/: ai.py  email.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_subscribers_and_click_events.py  003_users_children_plans_reviews.py  004_drip_events_newsletter_sends_unsubscribe.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_books.py  test_librarian.py  test_lists.py  test_newsletter.py  test_schemas.py  test_stats.py  test_stripe.py  test_tracking.py
frontend/: .env.example  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
(+90 files in other folders)
